working model with unexpected results

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,18 @@ click==6.7
 Flask==0.12.2
 itsdangerous==0.24
 Jinja2==2.10
-MarkupSafe==1.0
+MarkupSafe>=1.0
 Werkzeug==0.14.1
+setuptools==47.3.1
+torch==1.5.1 
+torchvision==0.6.1
+scikit-image==0.17.2
+dominate==2.5.1
+numpy>=1.15.1
+scipy>=1.0.1
+matplotlib>=2.0.0,!=3.0.0
+networkx>=2.0
+pillow>=4.3.0,!=7.1.0,!=7.1.1
+imageio>=2.3.0
+tifffile>=2019.7.26
+PyWavelets>=1.1.1
